--- a/scss/components/header/header_global.scss
+++ b/scss/components/header/header_global.scss
@@ -393,7 +393,7 @@
 
             .global-nav-search.in {
                 opacity:    1;
-                min-height: 5.35rem;
+                min-height: 5.4rem;
                 overflow:   visible;
 
                 .close-search {
